# shadoks-CGSHOP2022

./: CMakeLists.txt  LICENSE  README.md  run.sh  script.sh  tools.py
include/: cxxopts.hpp
parameter_files/: 2615.json  C2000.5.json  C4000.5.json  dsjc1000.1.json  dsjc1000.5.json  dsjc1000.9.json  dsjc250.5.json  dsjc500.1.json  dsjc500.5.json  dsjc500.9.json  dsjr500.1c.json  dsjr500.5.json  flat1000_50_0.json  flat1000_60_0.json  flat1000_76_0.json  flat300_28_0.json  le450_25c.json  le450_25d.json  r1000.1c.json  r1000.5.json  r250.5.json
src/: angle.hpp  bad.hpp  conflict.cpp  conflict.h  dsathull.hpp  dsatur.hpp  greedy.hpp  instance.hpp  main.cpp  primitives.hpp  solution.hpp
